# cpp-assignments

Assignment 1/: 1 guess number  1 guess number.cpp  2 increment  2 increment.cpp  3 max  3 max.cpp  4 maximum  4 maximum.cpp  5 area  5 area.cpp  input.txt
Assignment 2/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp
Assignment 3/: 3.cpp  4 Cell Removal  4 Cell Removal.cpp.odg  devidduma.cpp  devidduma.docx  devidduma4.odt
Assignment 4/: CMakeLists.txt  devid_duma.txt  hotPotato.cpp  parliament.cpp
Assignment 5/: ArrayManipulation.cpp  CMakeLists.txt  MrMonk.cpp  sortingSearchingCombination.cpp
Assignment 6/: CMakeLists.txt  caesarCipher.cpp  caesarCipherInput.txt  caesarCipherOutput.txt  frequencyOfWords.cpp  frequencyOfWords.txt  wordlist.txt  wordlistStatistics.cpp
Assignment 7/: CMakeLists.txt  Product.cpp  Time.cpp
